--- a/Lab1(basic)/Lab1(basic).vcxproj.filters
+++ b/Lab1(basic)/Lab1(basic).vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Lab1(basic).cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="auxiliary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="auxiliary.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
