--- a/Lab1(basic)/Lab1(basic).vcxproj.filters
+++ b/Lab1(basic)/Lab1(basic).vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="auxiliary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="auxiliary.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sort.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
